fix: remove scroll response to overflow
Closes #2652

--- a/public/styles/_app.scss
+++ b/public/styles/_app.scss
@@ -246,7 +246,7 @@
     min-height: 150px;
     max-height: 150px;
     height: 150px;
-    overflow: scroll;
+    overflow: auto;
   }
 }
 
